; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_set_modes.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_set_modes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i64, i64 }

@MODE_PTR = common dso_local global i32 0, align 4
@AHD_MODE_UNKNOWN = common dso_local global i64 0, align 8
@AHD_SHOW_MODEPTR = common dso_local global i32 0, align 4
@ahd_debug = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ahd_set_modes(%struct.ahd_softc* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.ahd_softc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.ahd_softc* %0, %struct.ahd_softc** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %8 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %19

12:                                               ; preds = %3
  %13 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %14 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %6, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  br label %33

19:                                               ; preds = %12, %3
  %20 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %21 = load i32, i32* @MODE_PTR, align 4
  %22 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %23 = load i64, i64* %5, align 8
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @ahd_build_mode_state(%struct.ahd_softc* %22, i64 %23, i64 %24)
  %26 = call i32 @ahd_outb(%struct.ahd_softc* %20, i32 %21, i32 %25)
  %27 = load i64, i64* %5, align 8
  %28 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %29 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %28, i32 0, i32 0
  store i64 %27, i64* %29, align 8
  %30 = load i64, i64* %6, align 8
  %31 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %32 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %31, i32 0, i32 1
  store i64 %30, i64* %32, align 8
  br label %33

33:                                               ; preds = %19, %18
  ret void
}

declare dso_local i32 @ahd_outb(%struct.ahd_softc*, i32, i32) #1

declare dso_local i32 @ahd_build_mode_state(%struct.ahd_softc*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
